# shoestrings

./: .gitignore  README.md  license.txt  pyproject.toml  setup.py  shoestrings-tutorial.ipynb
shoestrings/: __init__.py  processors.py  stoppers.py  tokenizers.py
